@@ -29,7 +29,9 @@
 #define TO_MASK(x) (1 << (x))
 
 // some defines from ICU needed one or two places
+// FIXME: This should use UnicodeMacrosFromICU.h instead!
 
+#define U_IS_BMP(c) ((UChar32)(c)<=0xffff)
 #define U16_IS_LEAD(c) (((c) & 0xfffffc00) == 0xd800)
 #define U16_IS_TRAIL(c) (((c) & 0xfffffc00) == 0xdc00)
 #define U16_SURROGATE_OFFSET ((0xd800 << 10UL) + 0xdc00 - 0x10000)
